<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primaryDarkColor"
    tools:context=".ui.activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            app:contentScrim="@color/primaryDarkColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/img_poster_detail"
                    android:layout_width="0dp"
                    android:layout_height="600dp"
                    android:contentDescription="@string/app_icon"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:contentDescription="@string/add_bookmark"
                    android:src="@drawable/ic_bookmark_outlined"
                    app:borderWidth="3dp"
                    app:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_poster_detail"
                    app:layout_constraintEnd_toEndOf="@+id/img_poster_detail"
                    app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
                    app:layout_constraintTop_toBottomOf="@+id/img_poster_detail"
                    app:tint="@color/secondaryColor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/btn_back_detail"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:background="@drawable/rounded_background_transparent"
                    android:contentDescription="@string/app_icon"
                    android:src="@drawable/ic_left_arrow_secondary_color" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/pg_detail"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="@dimen/dimen_standard" />

            <TextView
                android:id="@+id/tv_title_detail"
                style="@style/DefaultTextView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_small"
                android:layout_marginEnd="@dimen/dimen_standard"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                tools:text="Mortal Kombat" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_small"
                android:textColor="@color/secondaryColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
                tools:text="11-12-2021" />

            <TextView
                android:id="@+id/tv_original_lang_detail"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_small"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                tools:text="en" />

            <TextView
                android:id="@+id/tv_vote_average_title"
                style="@style/DefaultTextView"
                android:layout_marginHorizontal="@dimen/dimen_standard"
                android:layout_marginTop="@dimen/dimen_super_large"
                android:text="@string/vote_average"
                android:textColor="@color/secondaryColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/tv_vote_count_title"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_original_lang_detail" />

            <TextView
                android:id="@+id/tv_rating_detail"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_small"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_vote_average_title"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_title"
                tools:text="8.5/10" />

            <TextView
                android:id="@+id/tv_vote_count_title"
                style="@style/DefaultTextView"
                android:layout_marginHorizontal="@dimen/dimen_standard"
                android:text="@string/vote_count"
                android:textColor="@color/secondaryColor"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_vote_average_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@+id/tv_vote_average_title"
                app:layout_constraintTop_toTopOf="@+id/tv_vote_average_title" />

            <TextView
                android:id="@+id/tv_vote_count_detail"
                style="@style/DefaultTextView"
                android:layout_marginHorizontal="@dimen/dimen_standard"
                android:layout_marginTop="@dimen/dimen_small"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_vote_count_title"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_count_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_count_title"
                tools:text="563" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_standard"
                android:layout_marginVertical="@dimen/dimen_super_large"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_detail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_standard">

                    <TextView
                        style="@style/DefaultTextView"
                        android:text="@string/overview"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/DefaultTextView"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dimen_small"
                        android:textColor="@color/secondaryTextColor"
                        android:textStyle="normal"
                        tools:text="@tools:sample/lorem/random" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>